# learning-copilot

./: api.http  main.py  pyproject.toml
app/: db.py  main.py  models.py
app/core/: config.py
app/embeddings/: gemini_embeddings.py
app/ingestion/: pdf_ingestor.py  web_ingestor.py  youtube_ingestor.py
app/llm/: gemini.py
app/rag/: prompt.py  quiz_prompt.py  summarize_prompt.py  test_prompt.py
app/sessions/: db_store.py  store.py
app/vectorstore/: qdrant_store.py
