[project]
name = "learning-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.6",
    "langchain>=1.2.9",
    "langchain-google-genai>=4.2.0",
    "langchain-qdrant>=1.1.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "uvicorn>=0.40.0",
]
